syntax = "proto3";
package celestia.blob.v1;

// This file contains types which are copied from
// https://github.com/celestiaorg/celestia-app/blob/v1.7.0/proto/celestia/blob/v1/tx.proto

// MsgPayForBlobs pays for the inclusion of a blob in the block.
message MsgPayForBlobs {
  string signer = 1;
  // namespaces is a list of namespaces that the blobs are associated with. A
  // namespace is a byte slice of length 29 where the first byte is the
  // namespaceVersion and the subsequent 28 bytes are the namespaceId.
  repeated bytes namespaces = 2;
  repeated uint32 blob_sizes = 3;
  // share_commitments is a list of share commitments (one per blob).
  repeated bytes share_commitments = 4;
  // share_versions are the versions of the share format that the blobs
  // associated with this message should use when included in a block. The
  // share_versions specified must match the share_versions used to generate the
  // share_commitment in this message.
  repeated uint32 share_versions = 8;
}
